# slotmachine

./: .mypy.ini  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
sample_schedules/: scheduled_hard.json  unscheduled_easy.json  unscheduled_hard.json  unscheduled_very_hard.json
slotmachine/: __init__.py
src/slotmachine/: __init__.py  __main__.py  data.py  slotmachine.py  slots.py
tests/: test_integration.py  test_slotmachine.py  test_slots.py
