[tool.poetry]
name = "slotmachine"
version = "0.0.6"
description = "Conference talk scheduler"
authors = ["EMF <russ@emfcamp.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pulp = "2.1"
python-dateutil = ">=2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
